# rag-source

./: README.md  pyproject.toml
advanced_methods/01_docling/: 01_basic_conversion.py  02_pdf_advanced.py  03_chunking.py  04_integrations.py
advanced_methods/02_unstructured_io/: 01_auto_partition.py  02_pdf_strategies.py  03_specific_partitioners.py  04_chunking_and_export.py
advanced_methods/03_azure_doc_intelligence/: 01_layout_extraction.py  02_prebuilt_models.py  03_table_and_figure_extraction.py  04_rag_pipeline_example.py
advanced_methods/04_llamaparse/: 01_basic_parsing.py  02_llamaindex_integration.py  03_parsing_tiers.py
advanced_methods/05_marker/: 01_basic_conversion.py  02_output_formats.py  03_specialized_converters.py
advanced_methods/06_megaparse/: 01_basic_parsing.py  02_vision_parsing.py  03_rag_preparation.py
unstructured_documents/: README.md  generate_presentation.py
unstructured_documents/01_pdf/: 01_pypdf_extraction.py  02_pdfplumber_extraction.py  03_pymupdf_extraction.py  04_table_extraction.py  05_ocr_extraction.py  06_comparison.py
unstructured_documents/02_docx/: 01_python_docx_extraction.py  02_mammoth_extraction.py  03_docx2txt_extraction.py
unstructured_documents/03_pptx/: 01_python_pptx_extraction.py  02_slide_structured_extraction.py
unstructured_documents/04_html/: 01_beautifulsoup_extraction.py  02_html2text_extraction.py  03_trafilatura_extraction.py
unstructured_documents/05_spreadsheets/: 01_openpyxl_extraction.py  02_pandas_extraction.py  03_csv_extraction.py
unstructured_documents/07_email/: 01_email_parsing.py  (+1 more)
(+19 files in other folders)
